<resources>
    <string name="app_name">BLE Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">ABOUT</string>
    <string name="err_ble_not_supported">BLE NOT SUPPORTED  :(</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="rssi">RSSI: </string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="primary_srvice">PRIMARY SERVICE</string>
    <string name="secondary_service">SECONDARY SERVICE</string>
    <string name="properties">Properties:</string>
    <string name="value">VALUE:</string>
    <string name="data_to_send">Data</string>
    <string name="scan">SCAN</string>
    <string name="stop">STOP</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="connectiong">CONNECTING</string>
    <string name="disconnecting">DISCONNECTING</string>
    <string name="connecting">CONNECTING</string>

    <string name="pref_graph_history_key" translatable="false">pref_graph_history_key</string>
    <string name="pref_graph_history_label">History Size</string>
    <string name="pre_graph_history_default">300</string>
    <string name="pref_graph_boundary_key" translatable="false">pref_graph_boundary_key</string>
    <string name="pref_graph_boundary_label">Auto Boundary</string>
    <string name="pref_graph_boundary_high_default">10</string>
    <string name="pref_graph_boundary_high_key" translatable="false">pref_graph_boundary_high_key</string>
    <string name="pref_graph_boundary_high_label">Upper Boundary</string>
    <string name="pre_graph_boundary_low_default">0</string>
    <string name="pref_graph_boundary_low_key" translatable="false">pref_graph_boundary_low_key</string>
    <string name="pref_graph_boundary_low_label">Lower Boundary</string>
    <string name="pref_graph_boundary_false">Off</string>
    <string name="pref_graph_boundary_true">On</string>
    <string name="graph_settings">Graph Settings</string>


</resources>
